--- a/src/style.css
+++ b/src/style.css
@@ -17,12 +17,23 @@ h1 {
 }
 
 form {
-  padding: 30px;
+  display: flex;
+}
+
+.form-container {
+  padding: 15px 20px;
   background-color: white;
   border-radius: 10px;
-  display: flex;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   margin-bottom: 30px;
+}
+
+.hint {
+  line-height: 1.5;
+  font-size: 11px;
+  margin-top: 5px;
+  opacity: 0.8;
+  color: #7d6d8b;
 }
 
 a {
@@ -48,7 +59,6 @@ a {
   margin-left: 10px;
   background-color: #cda4de;
   color: white;
-  border: none;
   border-radius: 50px;
   padding: 14px 24px;
   width: 150px;
@@ -68,8 +78,27 @@ a {
   color: #cda4de;
 }
 
+.hidden {
+  display: none;
+}
+
 footer {
   text-align: center;
   font-size: 12px;
   margin-top: 30px;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+.blink {
+  animation: blink-animation 1s steps(5, start) infinite;
 }
